overflow fix

--- a/public/styles.css
+++ b/public/styles.css
@@ -11,6 +11,7 @@ body {
   text-transform: uppercase;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 a {
@@ -27,7 +28,7 @@ a {
   flex-direction: row;
   justify-content: space-between;
   width: 60vw;
-  padding-top: 6vh;
+  padding-top: 4vh;
   margin: 0 auto;
   z-index: 1;
 }
@@ -51,7 +52,7 @@ a {
 
 #settings {
   width: 85vw;
-  padding-top: 6vh;
+  padding-top: 4vh;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
